--- a/style.css
+++ b/style.css
@@ -1,41 +1,84 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  height: 100%;
+  font-family: 'Roboto', sans-serif;
 }
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template: auto 4fr / 1fr 4fr;
 }
+
+/*------HEADER-DIV-----*/
 
 .header {
   grid-column: 2 / 3;
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  box-shadow: 0 4px 4px 1px rgba(0, 0, 0, 0.816);
 }
 
-.sidebar {
-  background-color: #38bdf8;
-  grid-row: 1 / 4;
-  display: grid;
-  gap: 50px;
+/*header-top*/ 
+/*flex-box layout design properties will be used at header division*/
+
+.header-top {
+  display: flex;
+  gap: 10px;
+  padding: 20px;
+  margin-left: 20px;
+  align-items: center;
+  justify-content: space-between; /*pushing items through the frontier of top section div*/
 }
 
-.main {
-  background-color: #e2e8f0;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-template-rows: repeat(3, 1fr);
+.search-bar {
+  width: 70%; /*increases the division width inside the top section div for better UI allocation*/
+  display: flex;
+  align-items: center;
+  justify-items: center;
   gap: 10px;
 }
 
-.footer {
-  background-color: #393f4d;
-  color: white;
-  text-align: center;
-  grid-column: 1 / 3;
+label {
+  display: flex;
+  align-items: center; /*making the search image in line with the input area*/
+}
+
+input {
+  width: 80%; /*enlarging the input area by a larger percent of the total div*/
+  border-radius: 20px;
+  border: none;
+  background-color: #e2e8f0;
+  height: 2rem;
+  padding: 0.75em 2em; /*This will allow the text area to start and end NOT just the borders of the input area*/
+}
+
+.search-bar img {
+  cursor: pointer;
+}
+
+.info-bar {
+  width: 30%; /*decreases the division width inside the top section div for better UI allocation*/
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  gap: 30px;
+}
+
+.account-info {
+  display: flex;
+  align-items: center;
+  justify-items: space-between; /*pushing items through the frontier of the div*/
+  gap: 10px;
+}
+
+img[class="account-pic-small"] { /*small user account photo*/
+  height: 3rem;
+  width: 3rem;
+  border: 1px solid #38bdf8;
+  border-radius: 50%; /*making it a complete circle in shape*/
+}
+
+p.account-name {
+  font-weight: 800;
 }
