--- a/style.css
+++ b/style.css
@@ -372,5 +372,19 @@ img[src="./icons/dashboard.png"] { /*larger icon for title*/
   font-weight: 800;
 }
 
+/*------FOOTER-DIV-----*/
+
+.footer {
+  grid-column: 1 / 3; /*exact place of the footer*/
+  background-color: #393f4d;
+  color: white;
+  text-align: center;
+}
+
+.footer a:hover { /*when mouse moved around links at footer*/
+  color:fuchsia;
+}
+
+
 
 
