--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ img[src="./icons/dashboard.png"] { /*larger icon for title*/
 .announcements-trending {
   grid-column: 2 / 3; /*exact place of announcements & trending div*/
   display: grid; /*a new grid inside the grid layout of the body container*/
-  grid-template-rows: 1fr auto; /*2 rows allocated*/
+  grid-template-rows: auto 1fr; /*2 rows allocated*/
 }
 
 .announcements-trending h3 {
@@ -310,11 +310,13 @@ img[src="./icons/dashboard.png"] { /*larger icon for title*/
 .announcement-1,
 .announcement-2 {
   border-bottom: 1px dotted gainsboro;
-  padding-bottom: 0.5rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
 }
 
 .announcement-3 {
   padding-bottom: 1rem;
+  padding-top: 1rem;
 }
 
 .card {
@@ -331,7 +333,8 @@ img[src="./icons/dashboard.png"] { /*larger icon for title*/
 }
 
 .trending .card {
-  padding: 1rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
 }
 
 .trending-1,
